rhdlc/test/compile-fail/scope/use-crate-name-from-mod/top.rhdl
mod b {
    use crate::a;
}
